# arm-gryf1

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
communication/: communication.cpp  communication.h
eeprom/: eprom.cpp  eprom.h
komendy_AT/: checkPins.cpp  checkPins.h  error.cpp  error.h  functions.cpp  functions.h  komendyAT.cpp  komendyAT.h
lib/FreeRTOS-Kernel/include/: FreeRTOS.h
program_files/: main.cpp
program_files/communication/: communication.cpp  communication.h
program_files/eeprom/: eprom.cpp  eprom.h
program_files/komendy_AT/: checkPins.cpp  checkPins.h  error.cpp  error.h  komendyAT.cpp  komendyAT.h
program_files/task/: myTask.cpp  myTask.h
setup/: setup.cpp  setup.hpp
setup/hardware/: setup.cpp  setup.hpp
setup/komendy_AT/: commands.cpp  commands.h  functions.cpp  functions.h
task/: myTask.cpp  myTask.h
